plugins {
    id "nl.elec332.gradle.ossrhplugin" version "1.0.1-Alpha"
    id "com.dua3.gradle.jpms" version "0.9.0"
}

repositories {
    mavenCentral()
}

group 'nl.elec332.lib'
archivesBaseName = "ElecLib"
version '0.4-Alpha'

sourceCompatibility = targetCompatibility = 1.11

dependencies {
    compile "com.google.guava:guava:29.0-jre"
    compileOnly "io.netty:netty-all:4.1.48.Final"
}

ossrh {
    description = 'General-purpose library for Java'
    githubUrl = 'https://github.com/Elec332/ElecLib'

    license {
        name 'GNU Lesser General Public License, version 2.1'
        url 'https://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt'
    }
    developer {
        name 'Elec332'
    }
}
